第一个函数add

--- a/packages/screwdriver-number/package.json
+++ b/packages/screwdriver-number/package.json
@@ -11,12 +11,13 @@
   "main": "lib/screwdriver-number.js",
   "directories": {
     "lib": "lib",
-    "test": "__tests__"
+    "test": "test"
   },
   "files": [
     "lib"
   ],
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1"
-  }
+  },
+  "type": "module"
 }
