1. 引入了jest和ts-jest 2. 全面使用ts

--- a/packages/screwdriver-number/package.json
+++ b/packages/screwdriver-number/package.json
@@ -17,7 +17,13 @@
     "lib"
   ],
   "scripts": {
-    "test": "echo \"Error: run tests from root\" && exit 1"
+    "test": "jest"
   },
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "@types/jest": "^26.0.4",
+    "jest": "^26.1.0",
+    "ts-jest": "^26.1.1",
+    "typescript": "^3.9.6"
+  }
 }
