--- a/packages/screwdriver-js/package.json
+++ b/packages/screwdriver-js/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "screwdriver",
+  "name": "screwdriver-js",
   "version": "0.0.2",
   "description": "screwdriver",
   "keywords": [
@@ -22,5 +22,6 @@
   "type": "module",
   "devDependencies": {
     "typescript": "^3.9.6"
-  }
+  },
+  "gitHead": "3c3f7311c30dd32ab1926a9f015c687eac1cedd3"
 }
