--- a/packages/screwdriver-js/package.json
+++ b/packages/screwdriver-js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "screwdriver-js",
-  "version": "0.0.2",
+  "version": "0.0.1-alpha.0",
   "description": "screwdriver",
   "keywords": [
     "number"
