chore(lerna): 修改了lerna的配置文件，避免无效的publish，增加了对commitizen的支持

--- a/lerna.json
+++ b/lerna.json
@@ -2,5 +2,15 @@
   "packages": [
     "packages/*"
   ],
+  "npmClient": "yarn",
+  "command": {
+    "publish": {
+      "ignoreChanges": [
+        "*.md",
+        "**/test/**"
+      ],
+      "message": "chore(release): publish"
+    }
+  },
   "version": "0.0.1"
 }
