--- a/package.json
+++ b/package.json
@@ -1,14 +1,26 @@
 {
   "name": "screwdriver",
   "private": false,
+  "scripts": {
+    "test": "jest"
+  },
   "devDependencies": {
+    "@types/jest": "^26.0.4",
     "cz-conventional-changelog": "^3.2.0",
-    "lerna": "^3.22.1"
+    "lerna": "^3.22.1",
+    "jest": "^26.1.0",
+    "ts-jest": "^26.1.1",
+    "typescript": "^3.9.6"
   },
   "type": "module",
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "dependencies": {},
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node"
   }
 }
