chore(test): 重新调整测试

--- a/package.json
+++ b/package.json
@@ -18,9 +18,5 @@
       "path": "./node_modules/cz-conventional-changelog"
     }
   },
-  "dependencies": {},
-  "jest": {
-    "preset": "ts-jest",
-    "testEnvironment": "node"
-  }
+  "dependencies": {}
 }
