docs(all): 使用Typedoc搭建文档框架

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lerna": "^3.22.1",
     "jest": "^26.1.0",
     "ts-jest": "^26.1.1",
+    "typedoc": "^0.17.8",
     "typescript": "^3.9.6"
   },
   "type": "module",
