--- a/packages/screwdriver-js/package.json
+++ b/packages/screwdriver-js/package.json
@@ -10,5 +10,7 @@
     "test": "exit 0"
   },
   "type": "module",
-  "gitHead": "3c3f7311c30dd32ab1926a9f015c687eac1cedd3"
+  "gitHead": "3c3f7311c30dd32ab1926a9f015c687eac1cedd3",
+  "dependencies": {
+  }
 }
