refactor(flatten): 把Nest重命名为FLattenable

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "screwdriver",
   "private": false,
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "doc": "typedoc"
   },
   "devDependencies": {
     "@types/jest": "^26.0.4",
