--- a/packages/screwdriver-js/package.json
+++ b/packages/screwdriver-js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "screwdriver-js",
-  "version": "0.0.2",
+  "version": "0.0.3-alpha.0",
   "description": "screwdriver",
   "author": "奔跑的小草 <running-grass@foxmail.com>",
   "homepage": "",
@@ -10,7 +10,5 @@
     "test": "exit 0"
   },
   "type": "module",
-  "gitHead": "3c3f7311c30dd32ab1926a9f015c687eac1cedd3",
-  "dependencies": {
-  }
+  "gitHead": "3c3f7311c30dd32ab1926a9f015c687eac1cedd3"
 }
