--- a/packages/screwdriver-demo/package.json
+++ b/packages/screwdriver-demo/package.json
@@ -1,13 +1,13 @@
 {
   "name": "screwdriver-demo",
-  "version": "0.1.0",
+  "version": "0.0.4-alpha.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "screwdriver-js": "^0.0.3",
+    "screwdriver-js": "^0.0.4-alpha.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
