build(all): 引入tsc
re #14

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "private": false,
   "scripts": {
     "test": "jest",
-    "doc": "typedoc"
+    "doc": "typedoc",
+    "build": "tsc --build packages/screwdriver-js/tsconfig.json"
   },
   "devDependencies": {
     "@types/jest": "^26.0.4",
