--- a/packages/screwdriver-js/package.json
+++ b/packages/screwdriver-js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "screwdriver-js",
-  "version": "0.0.4-alpha.0",
+  "version": "0.0.4",
   "description": "screwdriver",
   "author": "奔跑的小草 <running-grass@foxmail.com>",
   "homepage": "",
