build(all): 构建amd模块

--- a/packages/screwdriver-js/package.json
+++ b/packages/screwdriver-js/package.json
@@ -6,6 +6,7 @@
   "homepage": "",
   "license": "ISC",
   "main": "src/index.ts",
+  "unpkg": "dist/screwdriver-js.amd.js",
   "scripts": {
     "test": "exit 0"
   },
