build(all): 使用umd

--- a/packages/screwdriver-js/tsconfig.json
+++ b/packages/screwdriver-js/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
-    "module": "AMD",
+    "module": "umd",
     "moduleResolution": "Node",
     "outDir": "dist",
-    "outFile": "dist/screwdriver-js.amd.js",
+    // "outFile": "dist/screwdriver-js.amd.js",
     "sourceMap": true,
   }
 }
