--- a/packages/screwdriver-js/package.json
+++ b/packages/screwdriver-js/package.json
@@ -6,10 +6,15 @@
   "homepage": "",
   "license": "ISC",
   "main": "src/index.ts",
-  "unpkg": "dist/screwdriver-js.amd.js",
+  "unpkg": "dist/index.js",
+  "jsdelivr": "dist/index.js",
   "scripts": {
     "test": "exit 0"
   },
   "type": "module",
+  "files": [
+    "src",
+    "dist"
+  ],
   "gitHead": "3c3f7311c30dd32ab1926a9f015c687eac1cedd3"
 }
