--- a/package.json
+++ b/package.json
@@ -3,19 +3,28 @@
   "version": "0.0.6",
   "license": "ISC",
   "author": "奔跑的小草 <running-grass@foxmail.com>",
-  "main": "src/index.ts",
-  "unpkg": "dist/index.js",
-  "jsdelivr": "dist/index.js",
+  "main": "es/index.ts",
+  "types": "src/index.ts",
+  "module": "es/index.js",
+  "unpkg": "umd/index.js",
+  "jsdelivr": "umd/index.js",
   "files": [
     "src",
-    "dist"
+    "dist",
+    "es",
+    "umd"
   ],
   "scripts": {
     "test": "jest",
     "doc": "typedoc",
-    "build": "tsc --build packages/screwdriver-js/tsconfig.json"
+    "build": "yarn build:es && yarn build:umd",
+    "build:es": "babel src --out-dir es --extensions '.ts'",
+    "build:umd": "babel src --out-dir umd --extensions '.ts' --env-name umd"
   },
   "devDependencies": {
+    "@babel/cli": "^7.10.5",
+    "@babel/plugin-transform-modules-umd": "^7.10.4",
+    "@babel/preset-typescript": "^7.10.4",
     "@types/jest": "^26.0.4",
     "cz-conventional-changelog": "^3.2.0",
     "jest": "^26.1.0",
@@ -29,6 +38,7 @@
       "path": "./node_modules/cz-conventional-changelog"
     }
   },
-  "dependencies": {},
+  "dependencies": {
+  },
   "gitHead": "3c3f7311c30dd32ab1926a9f015c687eac1cedd3"
 }
