--- a/.release-it.yml
+++ b/.release-it.yml
@@ -1,12 +1,12 @@
-git:
-  requireCleanWorkingDir: false
-github:
-  release: true
+# git:
+  # requireCleanWorkingDir: true
+# github:
+  # release: true
 hooks:
-  before:init:
-    - yarn test
-    - yarn doc
+  # before:init:
+    # - yarn test
+    # - yarn doc
   after:bump:
-    - npm run build
+    - yarn build
   after:git:release: echo After git push, before github release
   after:release: echo Successfully released ${name} v${version} to ${repo.repository}.
