--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "build": "yarn build:es && yarn build:umd",
     "build:es": "babel src --out-dir es --extensions '.ts'",
     "build:umd": "babel src --out-dir umd --extensions '.ts' --env-name umd",
-    "release": "release-it"
+    "release": "dotenv release-it"
   },
   "dependencies": {},
   "devDependencies": {
@@ -29,6 +29,7 @@
     "@babel/preset-typescript": "^7.10.4",
     "@types/jest": "^26.0.4",
     "cz-conventional-changelog": "^3.2.0",
+    "dotenv-cli": "^3.2.0",
     "jest": "^26.1.0",
     "release-it": "^13.6.5",
     "ts-jest": "^26.1.1",
